--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "graphql-server-example",
+  "name": "graphql-nodejs-backend",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "compile": "tsc",
     "start": "npm run compile && node ./dist/index.js",
-    "dev": "npm run compile && nodemon ./dist/index.js",
+    "dev": "tsc-watch --onSuccess \"node ./dist/index.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,13 +15,19 @@
   "type": "module",
   "dependencies": {
     "@apollo/server": "^4.10.4",
+    "@graphql-tools/schema": "^10.0.3",
     "dotenv": "^16.4.5",
     "graphql": "^16.8.1",
+    "graphql-middleware": "^6.1.35",
+    "graphql-shield": "^7.6.5",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.4"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.8",
     "nodemon": "^3.1.0",
+    "tsc-watch": "^6.2.0",
     "typescript": "^5.4.5"
   }
 }
