--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@apollo/server": "^4.10.4",
     "@graphql-tools/schema": "^10.0.3",
+    "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "graphql": "^16.8.1",
     "graphql-middleware": "^6.1.35",
